grid gap fix on mobile description

--- a/src/components/Work.css
+++ b/src/components/Work.css
@@ -32,7 +32,7 @@
 		border-top: 0px;
 		padding-top: 0px;
 		border-bottom: 0;
-
+		grid-gap: 20px;
 
 	}
 
